# rcos_io

./: .env.example  .gitignore  .infisical.json  .python-version  LICENSE  Makefile  README.md  celerybeat-schedule  dev-docker-compose.yml  manage.py  pyproject.toml  requirements.txt  requirments.txt  update.py
portal/: admin.py  apps.py  checks.py  forms.py  github.py  models.py  tasks.py  urls.py
portal/fixtures/: base_data.json  data.json  generate.py  projects.json  semesters.json  tags.json
portal/management/commands/: delete_unverified_users.py
portal/migrations/: 0001_initial.py  0001_squashed_0031_alter_meetingattendancecode_small_group_and_more.py  0002_alter_user_discord_user_id_and_more.py  0002_alter_user_email_alter_user_first_name_and_more.py  0002_alter_user_managers_alter_user_rcs_id.py  0002_alter_user_options_alter_enrollment_credits_and_more.py  0002_alter_user_role.py  0002_meeting_presentation_url.py  0003_alter_projectpitch_url_and_more.py  0003_alter_semester_options_alter_user_options_and_more.py  0003_alter_user_managers.py  0003_meeting_discord_event_id.py  0003_meeting_meetingattendance_meeting_attendances_and_more.py  0003_project_slug.py  0004_alter_meeting_options_remove_project_enrollments_and_more.py  0004_alter_project_homepage_url.py  0004_alter_project_slug.py  0004_project_portal_proj_name_c901dd_idx_and_more.py  0004_remove_project_description_markdown_and_more.py  0004_remove_project_portal_proj_name_ae220a_idx_and_more.py  0005_alter_enrollment_is_coordinator_and_more.py  0005_enrollment_notes_markdown.py  0005_meetingattendance_is_verified_meetingattendancecode.py  0005_organization_user_organization.py  0005_remove_project_is_seeking_members.py  0006_alter_meetingattendance_unique_together.py  0006_project_organization_alter_user_organization.py  0006_rename_presentation_url_projectpresentation_url_and_more.py  0006_smallgroup.py  0007_alter_meetingattendancecode_unique_together.py  0007_alter_projectpresentation_grade_and_more.py  0007_organization_discord_role_id_and_more.py  0007_smallgroup_projects.py  0008_alter_meetingattendancecode_meeting_and_more.py  0008_alter_user_options_alter_projecttag_name.py  0008_statusupdate.py  0009_projecttag_icon.py  0009_semester_is_accepting_mentors_and_more.py  0009_statusupdatesubmission.py  0010_remove_mentorapplication_is_approved_and_more.py  (+51 more)
portal/services/: discord.py  github.py
portal/static/css/: theme.css
portal/templates/: 403.html  404.html  500.html
portal/templates/portal/: base.html
portal/templates/portal/admin/: _menu.html  import.html  upload.html
portal/templates/portal/auth/: profile.html
portal/templates/portal/blog/: edit.html  index.html  post.html
portal/templatetags/: portal_extras.py  project_extras.py
portal/views/: __init__.py  admin.py  auth.py  blog.py  commits.py  discord.py  index.py  meetings.py  mentors.py  organizations.py  projects.py  shortlink.py  small_groups.py  users.py
rcos_io/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
sass/: theme.scss
staticfiles/: staticfiles.json
stresstests/: README.md  locustfile.py
(+67 files in other folders)
