[project]
name = "rcos-io"
version = "1.1.0"
description = ""
authors = [{ name = "Frank Matranga", email = "thefrankmatranga@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "django>=5.0.2,<6",
    "gunicorn>=23.0.0,<24",
    "celery>=5.2.7,<6",
    "python-dotenv>=1.0.0,<2",
    "sentry-sdk>=2.0.0,<3",
    "whitenoise>=6.4.0,<7",
    "markdownify>=0.14.0,<0.15",
    "django-markdownify>=0.9.3,<0.10",
    "django-magiclink>=1.2.0,<2",
    "django-anymail>=13.0.0,<14",
    "django-crispy-forms~=2.0",
    "crispy-bulma>=0.11.0,<0.12",
    "django-debug-toolbar>=6.0.0,<7",
    "gql>=3.4.1,<4",
    "requests-toolbelt>=1.0.0,<2",
    "psycopg2-binary>=2.9.6,<3",
    "redis>=6.4,<7",
    "dnspython>=2.3.0,<3",
    "eventlet>=0.40.0,<0.41",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0,<0.8",
    "faker>=40.5.1,<41",
]

[tool.hatch.build.targets.sdist]
include = ["rcos_io"]

[tool.hatch.build.targets.wheel]
include = ["rcos_io"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["E", "W", "F", "I", "UP", "RUF"]
ignore = ["E501", "RUF012"]
